--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="./assets/font/fontawesome/css/all.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <title>Tooth</title>
 
-    <!-- <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!-- Slick slider library -->
+    <link rel="stylesheet" type="text/css" href="./assets/slick/slick.css"/>
+    <script type="text/javascript" src="./assets/slick/slick.min.js"></script>
+
 </head>
 <body>
     <div class="app">
@@ -29,7 +32,7 @@
                         <li class="header__close-item">
                             Speak with a Client Educator today!         
                         </li>
-                        <li class="header__close-item ">
+                        <li class="header__close-item " >
                             <a href="tel:+877-867-5753">
                                 <i class="header__close-item-icon fa-solid fa-phone"></i>
                             </a>
@@ -46,7 +49,7 @@
                         <div class="header__navbar-item ">
                            <a href=""><img class="header__navbar-item-logo" src="./assets/img/logo.png" alt="Logo_navbar"></a>   
                         </div>
-                        <ul class="header__navbar-item nav-none " id="nav">
+                        <ul class="header__navbar-item header__navbar-item-type2 nav-none " id="nav">
                             <li  class="header__navbar-item-link header__navbar-item--has-menu">
                                 <a href="">Dental Stem Cells 101</a> 
                                 <!-- Menu hover1 -->
@@ -196,6 +199,22 @@
                             <div class="content__list-item-slider">
                                 <img src="./assets/img/icon/5.png" alt="" class="content__list-item-img">
                             </div> 
+                            <div class="content__list-item-slider">
+                                <img src="./assets/img/icon/1.png" alt="" class="content__list-item-img">
+                            </div>
+                            <div class="content__list-item-slider">
+                                <img src="./assets/img/icon/2.png" alt="" class="content__list-item-img">
+                            </div>
+                            <div class="content__list-item-slider">
+                                <img src="./assets/img/icon/3.png" alt="" class="content__list-item-img">
+                            </div>
+                            <div class="content__list-item-slider">
+                                <img src="./assets/img/icon/4.png" alt="" class="content__list-item-img">
+                            </div>
+                            <div class="content__list-item-slider">
+                                <img src="./assets/img/icon/5.png" alt="" class="content__list-item-img">
+                            </div> 
+                            
                         </div>
                     </div>
                 </div>
@@ -500,10 +519,7 @@
             </div>
         </footer>
     </div>
-    <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script> -->
-
 </body>
 <script src="main.js "></script>
+
 </html>
